# rules_wasmer

./: .gitignore  CHANGELOG.md  MODULE.bazel  README.md  cog.toml
wasmer/: extensions.bzl
wasmer/private/templates/: BUILD.bazel  wasmer.unix.BUILD.bazel  wasmer.windows.BUILD.bazel
