load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")

cc_import(
    name = "wasmer-static-lib",
    static_library = "lib/libwasmer.a",
)

cc_library(
    name = "wasmer-static",
    visibility = ["//visibility:public"],
    includes = ["include"],
    defines = ["WASM_API_EXTERN="],
    hdrs = glob(["include/**/*.h", "include/**/*.hh"]),
    deps = [":wasmer-static-lib"],
)

alias(
    name = "wasmer",
    visibility = ["//visibility:public"],
    actual = ":wasmer-static",
)
